# newlib

./: config-ml.in  config.guess  config.sub
libgloss/: Makefile.am  Makefile.in  configure  configure.ac  configure.in
libgloss/arc/: Makefile.in  Makefile.inc  aclocal.m4  arc-main-helper.c  arc-specific.h  arc-timer.c  arc-timer.h  arcv2elf-common.ld  configure  configure.ac  configure.in  crt0.S  emsdp-uart-setup.c  emsdp.specs  emsk-uart-setup.c  emsk.specs  emsk1_em4.x  emsk1_em6.x  emsk2.1_em5d.x  emsk2.1_em7d.x  emsk2.2_em11d.ld  emsk2.2_em11d.x  emsk2.2_em7d.ld  emsk2.2_em9d.x  emsk_em11d.specs  emsk_em11d.x  emsk_em9d.specs  emsk_em9d.x  gcrt0.S  hl-setup.c  hl-stub.c  hl.specs  hsdk-uart-setup.c  hsdk.specs  hsdk.x  iotdk-uart-setup.c  iotdk.specs  iotdk.x  libcfunc.c  nsim-syscall.h  (+14 more)
libgloss/arc64/: Makefile.in  Makefile.inc  asm.h  configure  configure.ac  configure.in  crt0.S  crti.S  crtn.S  hl-setup.c  hl-stub.c  hl.specs  nsim-syscall.c  nsim-syscall.h  nsim.specs  qemu-stub.c  qemu-write.c  readme-hostlink.md  sbrk.c
libgloss/csky/: configure
libgloss/libnosys/: acinclude.m4  configure  configure.in  warning.h
libgloss/riscv/: Makefile.inc  arcv-crt0.S  arcv.c  arcv.h  arcv.ld  arcv.specs  crt0.S  semihost-sys_exit.c  semihost-sys_fdtable.c  semihost-sys_gettimeofday.c  semihost-sys_times.c  sys_access.c  (+11 more)
newlib/: ChangeLog.ARC  configure  configure.host
newlib/libc/machine/arc/: Makefile.am  Makefile.in  asm.h  memcmp-601.S  memcmp-bs-norm.S  memcmp-stub.c  memcmp.S  memcpy-601.S  memcpy-700.S  memcpy-archs.S  memcpy-bs.S  memcpy-stub.c  memcpy.S  memset-601.S  memset-archs.S  memset-bs.S  memset-stub.c  memset.S  setjmp.S  strchr-601.S  strchr-700.S  strchr-bs-norm.S  strchr-bs.S  strchr-stub.c  strchr.S  strcmp-archs.S  strcmp-stub.c  strcmp.S  strcpy-600.S  strcpy-601.S  strcpy-700.S  strcpy-bs-arc600.S  strcpy-bs.S  strcpy-stub.c  strcpy.S  strlen-600.S  strlen-601.S  strlen-a4.c  strlen-bs-norm.S  strlen-bs.S  (+6 more)
newlib/libc/machine/arc/machine/: _types.h
newlib/libc/machine/arc64/: Makefile.am  Makefile.in  Makefile.inc  asm.h  configure  configure.in  memchr.S  memcmp-stub.c  memcmp.S  memcpy-stub.c  memcpy.S  memmove.S  memset-stub.c  memset.S  setjmp.S  strcat.S  strcmp.S  strlen.S
newlib/libc/machine/arc64/sys/: asm.h
(+90 files in other folders)
